week03/3.2/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "SALocation": {
      "type": "string",
      "metadata": {
          "description": "URL to location of linked template for SA"
      }
    },
    "virtualMachineSize": {
      "type": "string",
      "defaultValue": "Standard_B2s",
      "metadata": {
        "description": "Virtual machine size"
      }
    },
    "adminUsername": {
      "type": "string",
      "metadata": {
        "description": "Default Admin username"
      }
    },
    "adminPasswordOrKey": {
      "type": "securestring",
      "metadata": {
        "description": "SSH Key or password for the Virtual Machine. SSH key is recommended."
      }
    },
    "authenticationType": {
      "type": "string",
      "defaultValue": "password",
      "allowedValues": [
        "sshPublicKey",
        "password"
      ],
      "metadata": {
        "description": "Type of authentication to use on the Virtual Machine. SSH key is recommended."
      }
    },
    "ubuntuOSVersion": {
      "type": "string",
      "defaultValue": "18.04-LTS",
      "allowedValues": [
        "12.04.5-LTS",
        "14.04.5-LTS",
        "16.04.0-LTS",
        "18.04-LTS"
      ],
      "metadata": {
        "description": "The Ubuntu version for the VM. This will pick a fully patched image of this given Ubuntu version."
      }
    },
    "storageAccountType": {
      "type": "string",
      "defaultValue": "Standard_LRS",
      "metadata": {
        "description": "Storage Account type for the VM and VM diagnostic storage"
      },
      "allowedValues": [
        "Standard_LRS",
        "Premium_LRS"
      ]
    },
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "arm-we-vnet",
      "metadata": {
        "description": "This is your Virtual Network"
      }
    },
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/16",
      "metadata": {
        "description": "The CIDR address space for your Virtual Network in Azure"
      }
    },
    "FESubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.0.0/24",
      "metadata": {
        "description": "This is CIDR prefix for the FrontEnd Subnet"
      }
    },
    "BESubnetPrefix": {
      "type": "string",
      "defaultValue": "10.0.1.0/24",
      "metadata": {
        "description": "This is CIDR prefix for the Application Subnet"
      }
    },
    "FENSGName": {
      "type": "string",
      "defaultValue": "arm-fe-we-nsg",
      "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to FrontEnd Subnet"
      }
    },
    "BENSGName": {
      "type": "string",
      "defaultValue": "arm-be-we-nsg",
      "metadata": {
        "description": "This is name of the networkSecurityGroup that will be assigned to BackEnd Subnet"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    },
    "FEdnsLabelPrefix": {
      "type": "string",
      "defaultValue": "arm-fe-vm",
      "metadata": {
        "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
      }
    },
    "BEdnsLabelPrefix": {
      "type": "string",
      "defaultValue": "arm-be-vm",
      "metadata": {
        "description": "Unique DNS Name for the Public IP used to access the Virtual Machine."
      }
    }
  },
  "variables": {
    "FEVMName": "arm-fe-we-vm",
    "BEVMName": "arm-be-we-vm",
    "FEIPAddressName": "arm-fe-we-ip",
    "BEIPAddressName": "arm-be-we-ip",
    "FEIpConfig":"arm-fe-we-iconfig",
    "BEIpConfig":"arm-be-we-iconfig",    
    "FESubnetName": "arm-fe-we-subnet",
    "BESubnetName": "arm-be-we-subnet",
    "subnetFERef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), variables('FESubnetName'))]",
    "subnetBERef": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), variables('BESubnetName'))]",
    "FEnetworkInterfaceName":"[concat(variables('FEVMName'), 'netint')]",
    "BEnetworkInterfaceName":"[concat(variables('BEVMName'), 'netint')]",
    "FEVMStorageAccountName": "armfevmwesa",
    "BEVMStorageAccountName": "armbevmwesa",
    "linuxConfiguration": {
      "disablePasswordAuthentication": true,
      "ssh": {
        "publicKeys": [
          {
            "path": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
            "keyData": "[parameters('adminPasswordOrKey')]"
          }
        ]
      }
    }
  },
  "resources": [
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('FEnetworkInterfaceName')]",
      "location": "[parameters('location')]",
      "dependsOn":[
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('FENSGName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
        "[resourceId('Microsoft.Network/publicIpAddresses/', variables('FEIPAddressName'))]"          
      ],
      "properties":{
        "ipConfigurations": [
          {
            "name": "[variables('FEIpConfig')]",
            "properties": {
              "subnet": {
                "id": "[variables('subnetFERef')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('FEIPAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('FENSGName'))]"
        }
      }     
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('BEnetworkInterfaceName')]",
      "location": "[parameters('location')]",
      "dependsOn":[
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('BENSGName'))]",
        "[resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName'))]",
        "[resourceId('Microsoft.Network/publicIpAddresses/', variables('BEIPAddressName'))]"          
      ],
      "properties":{
        "ipConfigurations": [
          {
            "name": "[variables('BEIpConfig')]",
            "properties": {
              "subnet": {
                "id": "[variables('subnetBERef')]"
              },
              "privateIPAllocationMethod": "Dynamic",
              "publicIpAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses',variables('BEIPAddressName'))]"
              }
            }
          }
        ],
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups',parameters('BENSGName'))]"
        }
      }     
    },
    {
      "apiVersion": "2020-06-01",        
      "type": "Microsoft.Network/publicIpAddresses",
      "name": "[variables('FEIPAddressName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIpAllocationMethod": "Dynamic",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[parameters('FEdnsLabelPrefix')]"
        },
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "apiVersion": "2020-06-01",        
      "type": "Microsoft.Network/publicIpAddresses",
      "name": "[variables('BEIPAddressName')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Basic",
        "tier": "Regional"
      },
      "properties": {
        "publicIpAllocationMethod": "Dynamic",
        "publicIPAddressVersion": "IPv4",
        "dnsSettings": {
          "domainNameLabel": "[parameters('BEdnsLabelPrefix')]"
        },
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "apiVersion": "2019-12-01",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('FEVMName')]",
      "location": "[parameters('location')]",
      "dependsOn":[
          "[variables('FEVMStorageAccountName')]",
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('FEnetworkInterfaceName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "fromImage",
            "managedDisk": {
              "storageAccountType": "[parameters('storageAccountType')]"
            }
          },
          "imageReference": {
            "publisher": "Canonical",
            "offer": "UbuntuServer",
            "sku": "[parameters('ubuntuOSVersion')]",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('FEnetworkInterfaceName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('FEVMName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPasswordOrKey')]",
          "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
        }
      }
    },
    {
      "apiVersion": "2019-12-01",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[variables('BEVMName')]",
      "location": "[parameters('location')]",
      "dependsOn":[
          "[variables('BEVMStorageAccountName')]",
          "[resourceId('Microsoft.Network/networkInterfaces/', variables('BEnetworkInterfaceName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[parameters('virtualMachineSize')]"
        },
        "storageProfile": {
          "osDisk": {
            "createOption": "fromImage",
            "managedDisk": {
              "storageAccountType": "[parameters('storageAccountType')]"
            }
          },
          "imageReference": {
            "publisher": "Canonical",
            "offer": "UbuntuServer",
            "sku": "[parameters('ubuntuOSVersion')]",
            "version": "latest"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('BEnetworkInterfaceName'))]"
            }
          ]
        },
        "osProfile": {
          "computerName": "[variables('BEVMName')]",
          "adminUsername": "[parameters('adminUsername')]",
          "adminPassword": "[parameters('adminPasswordOrKey')]",
          "linuxConfiguration": "[if(equals(parameters('authenticationType'), 'password'), json('null'), variables('linuxConfiguration'))]"
        }
      }
    },
    {
      "apiVersion": "2019-06-01",
      "type": "Microsoft.Resources/deployments",
      "name": "[variables('FEVMStorageAccountName')]",
      "properties":{
        "mode": "Incremental",
        "templateLink": {
            "uri": "[parameters('SALocation')]",
            "contentVersion": "1.0.0.0"
        },
        "parameters": {
            "storageAccountName": {"value": "[variables('FEVMStorageAccountName')]"},
            "storageAccountType": {"value": "[parameters('storageAccountType')]"},
            "location": {"value": "[parameters('location')]"}
        }
      }
    },
    {
      "apiVersion": "2019-06-01",
      "type": "Microsoft.Resources/deployments",
      "name": "[variables('BEVMStorageAccountName')]",
      "properties":{
        "mode": "Incremental",
        "templateLink": {
           "uri": "[parameters('SALocation')]",
           "contentVersion": "1.0.0.0"
        },
        "parameters": {
            "storageAccountName": {"value": "[variables('BEVMStorageAccountName')]"},
            "storageAccountType": {"value": "[parameters('storageAccountType')]"},
            "location": {"value": "[parameters('location')]"}
        }
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('FENSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "web_rule",
            "properties": {
              "description": "Allow WEB",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            } 
          }
        ]
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('BENSGName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "Allow_FE",
            "properties": {
              "description": "Allow FE Subnet",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "[parameters('FESubnetPrefix')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_RDP_Internet",
            "properties": {
              "description": "Block RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 101,
              "direction": "Inbound"
            }
          },
          {
            "name": "Block_Internet_Outbound",
            "properties": {
              "description": "Block Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "Internet",
              "access": "Deny",
              "priority": 200,
              "direction": "Outbound"
            }
          },
          {
            "name": "ssh_rule",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound"
            } 
          }
        ]
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('FENSGName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('BENSGName'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('FESubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('FESubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('FENSGName'))]"
              }
            }
          },
          {
            "name": "[variables('BESubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('BESubnetPrefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('BENSGName'))]"
              }
            }
          }
        ]
      }
    }
  ]
}
